# aslip

./: .gitignore  Cargo.toml  README.md  coding_log.md  justfile  todo.md
aslip/: Cargo.toml  README.md
aslip/src/: app.rs  custom_types.rs  from_arg_sttr.rs  lib.rs  types.rs
aslip_macro/: Cargo.toml  README.md
aslip_macro/src/: attribute_args.rs  command_impl.rs  data.rs  fn_arg_info.rs  fn_info.rs  lib.rs  rules.rs  run_impl.rs
aslip_macro/tests/: 1.rs
aslip_test/: Cargo.toml
aslip_test/src/: aa.rs  asd.rs  cmds.rs  main.rs
src/: app.rs  from_arg_sttr.rs  lib.rs  types.rs
