[package]
name = "aslip_macro" # a simple command line paser.
version = "0.1.9"
edition = "2024"

description = "helper macros for aslip"
license = "MIT"
repository = "https://github.com/chen-bao-x/aslip"

documentation = "https://github.com/chen-bao-x/aslip"



[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
once_cell = "1.21.3"
owo-colors = "4.2.2"
